public interface Aromatizable {
    void reduceSmell(int amount);
}
