public record SmellRecord(int level, String description) {
}










